bk_ida/bzip2ida/c2/BZ2_hbMakeCodeLengths
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbMakeCodeLengths/src/huffman.c:672:29: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v23 = _mm_cmpeq_epi32( v21, ( __m128i)0LL); 
                            ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbMakeCodeLengths/src/huffman.c:673:24: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v24 = _mm_cmpeq_epi32( ( __m128i)0LL, v22); 
                       ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbMakeCodeLengths/src/huffman.c:675:44: error: use of undeclared identifier 'xmmword_419890'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_419890); 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbMakeCodeLengths/src/huffman.c:687:42: error: use of undeclared identifier 'xmmword_419890'
v12 = _mm_load_si128( ( const __m128i *)&xmmword_419890); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbMakeCodeLengths/src/huffman.c:692:29: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v15 = _mm_cmpeq_epi32( v13, ( __m128i)0LL); 
                            ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbMakeCodeLengths/src/huffman.c:693:29: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v16 = _mm_cmpeq_epi32( v14, ( __m128i)0LL); 
                            ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbMakeCodeLengths/src/huffman.c:702:29: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v19 = _mm_cmpeq_epi32( v17, ( __m128i)0LL); 
                            ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbMakeCodeLengths/src/huffman.c:703:29: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v20 = _mm_cmpeq_epi32( v18, ( __m128i)0LL); 
                            ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbMakeCodeLengths/src/huffman.c:744:42: error: use of undeclared identifier 'xmmword_4198A0'
v32 = _mm_load_si128( ( const __m128i *)&xmmword_4198A0); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbMakeCodeLengths/src/huffman.c:745:42: error: use of undeclared identifier 'xmmword_419890'
v33 = _mm_load_si128( ( const __m128i *)&xmmword_419890); 
                                         ^
10 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbMakeCodeLengths/src/obj/huffman.o] Error 1
